--- a/DAY 4/styles.css
+++ b/DAY 4/styles.css
@@ -12,7 +12,7 @@
   height: 500px;
   border: 50px solid red;
   box-shadow: black;
-  position: relative; */
+  position: relative;
   box-shadow: 0px 0px 10px 10px;
 }
 
