--- a/dontreact/src/day22/day22.css
+++ b/dontreact/src/day22/day22.css
@@ -16,8 +16,27 @@
 }
 .template .image {
     width: 100%;
-    height: 500px;
+    height: 400px;
     border: 1px solid black;
-
+    background-size: cover;
+    background-position:center ;
+    background-repeat: no-repeat;
 }
 
+.meme {
+    text-align: center;
+}
+.meme img{
+    width: auto;
+    height: 500px;
+    border: 1px solid black;
+}
+
+.meme input {
+    margin: 10px;
+    padding: 5px;
+}
+.meme button {
+    padding: 5px;
+    margin: 10px;
+}
