--- a/dontreact/src/day23/day23.css
+++ b/dontreact/src/day23/day23.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -18,4 +18,4 @@ div > p {
     margin-top: 30px;
     justify-content: center;
     align-items: center;
-}
+} */
